Cascading Change Log

3.0.0 [unreleased]

  Update janino to 2.7.6.

  Added support for Apache Tez. See README for details.

  Added c.f.FlowRuntimeProps to allow for setting cluster side specific properties per c.f.Flow instance in a platform
  independent manner.

  Changed planner to disallow duplicate c.p.Pipe head and tail names.

  Updated c.f.p.FlowPlanner to use generalized isomorphic sub-graph matching rules to apply platform specific plan
  assertions, transforms, and step partitioning.

2.6.0

  Updated c.p.a.AggregateBy and c.p.a.Unique to count cache flushes, hits, and misses. Previously only AggregateBy
  tracked cache flushes.

  Updated slf4j to 1.7.5.

  Added ability to customize trace data captured for debugging purposes.

  Added CONTRIBUTING.md.

  Updated c.t.h.DistCacheTap to support simple file globing as provided by c.t.h.Hfs.

  Fixed issue where c.p.a.UniqueBy was not honoring the c.t.Hasher interface.

  Added c.t.h.DistCacheTap a decorator for a c.t.h.Hfs instance that uses o.a.h.f.DistributedCache to read files
  transparently from local disk. This is useful for c.p.HashJoins.

  Added c.t.DecoratorTap class to simplify wrapping a given c.t.Tap instance with additional meta-data.

  Updated c.f.p.FlowPlanner to allow both intermediate temporary c.t.Tap or any c.p.Checkpoint tap to be decorated
  by a configured c.t.DecoratorTap class via new c.f.FlowConnectorProps properties.

  Fixed issue where c.p.a.AggregateBy was not honoring the c.t.Hasher interface.

  Fixed issues around c.o.e.ExpressionFunction and c.o.e.ExpressionFilter either accepting Fields.NONE as incoming
  arguments, or inheriting incoming type information from the resolved arguments.

  Added c.m.a.URISanitizer, an implementation of the c.m.a.Sanitizer interface, for sanitizing URIs of different
  resources (file, HTTP, HDFS, JDBC etc.). c.t.Tap and all subclasses use it for the identifier.
