@@ -2,6 +2,9 @@ Cascading Change Log
 
 3.0.0 [unreleased]
 
+  Fixed issue where a start/stop race condition in c.c.Cascade could allow a downstream c.f.Flow to start when a
+  predecessor fails.
+
   Update janino to 2.7.6.
 
   Added support for Apache Tez. See README for details.
